# learn_cmake

./: .gitignore  ReadMe.md
CMakeModules/: FindHELLO.cmake
HelloWorld/: CMakeLists.txt
HelloWorld/include/: Hello.h
HelloWorld/src/: CMakeLists.txt  Hello.cpp
TestFindModules/: CMakeLists.txt
TestFindModules/src/: CMakeLists.txt  main.cpp
TestLinkLib/: CMakeLists.txt
TestLinkLib/src/: CMakeLists.txt  main.cpp
